# learn_tauri_and_leptos

./: .editorconfig  Cargo.toml  README.md  xxx_hoge.txt
src/: app.rs  lib.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: greet.rs  mod.rs
